# human-protein-atlas

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  MEMORY.md  README.md  ROADMAP.md  SETUP.md  pyproject.toml
.claude/: MEMORY.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  dbt-docs.yml  keep-app-alive.yml  ping-app.yml  repo-heartbeat.yml  streamlit-keepalive.yml
apps/ui/: app.py  app_theme.md  data.py  render.py  requirements.txt  tour.py
apps/ui/.streamlit/: config.toml  secrets.toml.example
apps/ui/tests/: conftest.py  test_data.py  test_render.py  test_tour.py
docs/: protein_atlas_curation_list.md  protein_atlas_data_source_manifest.md
infra/: main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
models/: .gitignore  dbt_project.yml  profiles.yml
models/analyses/: _schema.yml  protein_story_card.sql
models/fixtures/: build_bronze_stubs.py
models/fixtures/bronze/hpa/v24/: hpa_proteome.parquet
models/fixtures/bronze/llm/v2026_06/: protein_rewrites.parquet
models/fixtures/bronze/opentargets/v26.03/: ot_associations.parquet  ot_diseases.parquet  ot_drug_molecules.parquet  ot_drugs.parquet  ot_targets.parquet
models/fixtures/bronze/string/v12.0/: string_interactions.parquet
models/fixtures/bronze/uniprot/v2026_01/: uniprot_human_reviewed_raw.parquet
models/macros/: bronze_views.sql
models/marts/: _docs.md  _schema.yml  _unit_tests.yml  dim_disease.sql  dim_drug.sql  dim_protein.sql  fact_drug_target_disease.sql  fact_interaction.sql  fact_protein_aa_composition.sql  fact_protein_disease.sql  fact_protein_tissue.sql
models/queries/: _schema.yml  protein_story_card.sql
models/seeds/: _schema.yml  dim_protein_editorial.csv  family_group_map.csv  seed_amino_acids.csv
models/staging/: _schema.yml  _sources.yml  stg_hpa.sql  stg_llm_rewrites.sql  stg_ot_associations.sql  stg_ot_diseases.sql  stg_ot_drug_molecules.sql  stg_ot_drugs.sql  stg_ot_targets.sql  stg_string.sql  stg_uniprot.sql
models/tests/: assert_dim_drug_max_phase_range.sql  assert_dim_protein_family_group_valid.sql  assert_dim_protein_sequence_length_consistent.sql  assert_dim_protein_volume_sane.sql  assert_fact_drug_target_disease_unique_triples.sql  assert_fact_interaction_canonical_unique_pairs.sql  assert_fact_interaction_combined_score_range.sql  assert_fact_interaction_no_self_loops.sql  assert_fact_protein_disease_overall_score_range.sql  assert_fact_protein_disease_unique_pairs.sql  assert_protein_aa_composition_complete.sql
notebooks/: fix_bucket2_rewrites.py  generate_editorial_seed.py  preflight_part4.py  sanity_check_part4.py  setup_motherduck_r2_secret.py  smoketest_part4.py
pipelines/atlas/: __init__.py  definitions.py  logging.py
pipelines/atlas/assets/: __init__.py
pipelines/atlas/assets/ingest/: __init__.py  hpa.py  opentargets.py  string.py  uniprot.py
pipelines/atlas/assets/llm/: __init__.py  rewrites.py
pipelines/atlas/assets/ml/: __init__.py  embeddings.py  modal_esm2.py  neighbors.py
pipelines/atlas/resources/: __init__.py  r2.py
pipelines/atlas/tests/: test_embeddings.py  test_hpa.py  test_neighbors.py  test_opentargets.py  test_rewrites.py  test_string.py  test_uniprot.py
pipelines/atlas/tests/fixtures/: uniprot_insulin.json
